optimization for tests